--- a/css/style.css
+++ b/css/style.css
@@ -158,12 +158,13 @@ span{
 }
 .result2{
     border: 2px solid rgba(209, 72, 67, 0.767);
-    height: 12vh;
+    /* height: 12vh; */
     width: 67%;
     margin: auto;
     margin-top: 20px;
     text-align: center;
-    padding-top: 25px;
+    /* padding-top: 25px; */
+    padding: ;
     font-size: 20px;
     border-radius: 5px;
 }
@@ -313,7 +314,7 @@ span{
         height: 175vh;
     }
     .answer-3 span, .answer2 span, .answer span{
-        top: -98px;
+        top: -117px;
         left: 60px;
     }
     
@@ -326,7 +327,7 @@ span{
         font-size: 20px;
     }
     .result, .result2, .result3{
-        height: 10vh;
+        padding: 50px ;
     }
 
 }
