--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,8 @@ span{
         font-size: 20px;
     }
     .result, .result2, .result3{
-        padding: 50px ;
+        padding: 20px 60px;
+        padding-top: 35px;
         text-align: center;
     }
 
